manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app1
  annotations:
    argocd-image-updater.argoproj.io/image-list: ghcr.io/durgesh191/my-app1
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/ghcr.io_durgesh191_my-app1.update-strategy: latest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app1
  template:
    metadata:
      labels:
        app: my-app1
    spec:
      imagePullSecrets:
        - name: ghcr-creds   
      containers:
        - name: my-app1
          image: ghcr.io/durgesh191/kubernetes-cicd:latest
          ports:
            - containerPort: 80
