manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec: 
  selector:
    app: my-app1
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
